--- a/scouting/old-yearly/2023/app/build.gradle
+++ b/scouting/old-yearly/2023/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0' //FOR QR CREATION
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.10' //FOR BLUE ALLIANCE ACCESS
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
