--- a/scouting/old-yearly/2024/package.json
+++ b/scouting/old-yearly/2024/package.json
@@ -33,6 +33,7 @@
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
     "nativewind": "^2.0.11",
+    "qrcode": "^1.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
@@ -43,7 +44,10 @@
     "react-native-reanimated": "3.3.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-qrcode-svg": "*",
+    "react-native-svg": "13.4.0",
     "react-native-web": "~0.19.6",
+    "react-native-paper": "4.9.2",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "rn-sliding-up-panel": "^2.4.6"
   },
