--- a/scouting/old-yearly/2024/package.json
+++ b/scouting/old-yearly/2024/package.json
@@ -54,7 +54,8 @@
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "reflect-metadata": "^0.2.1",
     "rn-sliding-up-panel": "^2.4.6",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "@react-native-async-storage/async-storage": "1.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
