--- a/scouting/old-yearly/2024/package.json
+++ b/scouting/old-yearly/2024/package.json
@@ -17,6 +17,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@expo/websql": "^1.0.1",
     "@gorhom/bottom-sheet": "^4.6.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.0.2",
     "@rneui/base": "^4.0.0-rc.7",
@@ -24,7 +25,7 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "expo": "~49.0.15",
     "expo-asset": "~8.10.1",
-    "expo-dev-client": "~2.4.12",
+    "expo-dev-client": "~2.4.13",
     "expo-file-system": "~15.4.5",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
@@ -38,29 +39,34 @@
     "qrcode": "^1.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.72.10",
     "react-native-animated-stopwatch-timer": "^1.1.0",
+    "react-native-counters": "^1.3.0",
     "react-native-draggable-flatlist": "^4.0.1",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native-element-dropdown": "^2.10.1",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "4.9.2",
     "react-native-qrcode-svg": "*",
     "react-native-quick-sqlite": "^8.0.6",
     "react-native-reanimated": "3.3.0",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "13.4.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "reflect-metadata": "^0.2.1",
     "rn-sliding-up-panel": "^2.4.6",
-    "typeorm": "^0.3.20",
-    "@react-native-async-storage/async-storage": "1.18.2"
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/jest-dom": "6.4.2",
+    "@testing-library/react": "14.2.1",
+    "@testing-library/react-native": "*",
     "@types/react": "~18.2.14",
     "@types/url-parse": "^1.4.11",
+    "expo-module-scripts": "3.4.1",
     "jest": "^29.2.1",
     "jest-expo": "~49.0.0",
     "patch-package": "^8.0.0",
