--- a/scouting/android/pubspec.yaml
+++ b/scouting/android/pubspec.yaml
@@ -30,14 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_markdown: ^0.6.10
+
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  bluetooth_low_energy_android: ^6.0.2
-  flutter_blue: ^0.8.0
+  permission_handler: ^9.1.0
+  qr_flutter: ^4.1.0
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
@@ -48,7 +49,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
