--- a/scouting/android/pubspec.yaml
+++ b/scouting/android/pubspec.yaml
@@ -33,12 +33,16 @@ dependencies:
 
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  permission_handler: ^9.1.0
+  permission_handler: ^11.3.1
   qr_flutter: ^4.1.0
   path: ^1.9.0
+  http: ^1.2.1
+  sqflite: ^2.3.3+1
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
@@ -61,11 +65,18 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/Areana.png
+    - assets/RedAlliance.png
+    - assets/BlueAlliance.png
+
+
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+#     - images/a_dot_burr.jpeg
+#     - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
