--- a/scouting/android/pubspec.yaml
+++ b/scouting/android/pubspec.yaml
@@ -72,6 +72,7 @@ flutter:
     - assets/BlueAlliance.png
     - assets/BlueAlliance_StartPosition.png
     - assets/RedAlliance_StartPosition.png
+    - assets/Swerve.png
 
 
 
