--- a/scouting/android/pubspec.yaml
+++ b/scouting/android/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   appinio_swiper: ^2.1.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  flutter_rating_bar: ^4.0.1
 
 
 dev_dependencies:
