Ui 75% Done Ux 50% Done

--- a/scouting/android/pubspec.yaml
+++ b/scouting/android/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   flutter_rating_bar: ^4.0.1
+  google_fonts: ^6.2.1
+  provider: ^6.0.0
+  shared_preferences: ^2.0.6
 
 
 dev_dependencies:
