--- a/scouting/android/pubspec.yaml
+++ b/scouting/android/pubspec.yaml
@@ -55,9 +55,12 @@ dependencies:
   vertical_card_pager: ^1.4.0
   clippy_flutter: ^2.0.0-nullsafety.1
   swipe_deck: ^1.1.0
-  photo_view: ^0.14.0
+  photo_view: ^0.15.0
   path_provider: ^2.0.11
   carousel_slider: ^5.0.0
+  snappy_list_view: ^0.1.0
+  qr_code_scanner: ^1.0.1
+
 
 
 dev_dependencies:
@@ -72,6 +75,7 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   hive_generator: ^2.0.1
   build_runner: ^2.4.11
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -95,6 +99,9 @@ flutter:
     - assets/thumb.png
     - assets/ref/Cheat-Sheet.jpg
     - assets/ref/Cheat-Sheet-2.jpg
+    - assets/Default/Auton.json
+    - assets/Default/TeleOp.json
+    - assets/Default/EndGame.json
 
 
 
