--- a/scouting/android/pubspec.yaml
+++ b/scouting/android/pubspec.yaml
@@ -38,7 +38,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   permission_handler: ^11.3.1
-  qr_flutter: ^4.1.0
   path: ^1.9.0
   http: ^1.2.1
   sqflite: ^2.3.3+1
@@ -59,8 +58,9 @@ dependencies:
   path_provider: ^2.0.11
   carousel_slider: ^5.0.0
   snappy_list_view: ^0.1.0
-  qr_code_scanner: ^1.0.1
   url_launcher: ^6.3.1
+  qr_flutter: ^4.1.0
+  mobile_scanner: ^6.0.2
 
 
 
