--- a/operations-manual/package.json
+++ b/operations-manual/package.json
@@ -9,9 +9,9 @@
     "@mdx-js/mdx": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@monaco-editor/react": "^4.6.0",
+    "@remark-embedder/core": "^3.0.3",
     "@supabase/supabase-js": "^2.46.1",
     "codemirror": "^6.0.1",
-    "mdx-embed": "^1.1.2",
     "monaco-editor": "^0.49.0",
     "next": "^14.2.4",
     "nextra": "^2.13.4",
@@ -21,6 +21,7 @@
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
     "react-select": "^5.8.0",
+    "remark-definition-list": "^2.0.0",
     "string-similarity": "^4.0.4",
     "styled-components": "^6.1.13",
     "y-codemirror.next": "^0.3.4",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@types/node": "20.14.4",
+    "tailwindcss": "^3.4.17",
     "typescript": "5.4.5"
   }
 }
