--- a/operations-manual/package.json
+++ b/operations-manual/package.json
@@ -32,7 +32,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next start"
   },
   "devDependencies": {
     "@types/node": "20.14.4",
