--- a/operations-manual/package.json
+++ b/operations-manual/package.json
@@ -33,14 +33,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next build && touch out/.nojekyll",
+    "export": "next build && node createNoJekyll.js",
     "lint": "next lint --max-warnings=0",
     "type-check": "tsc",
-    "deploy": "npm run export && gh-pages -d out -t true",
+    "deploy": "npm run export && gh-pages -d out -t true"
   },
   "devDependencies": {
     "@types/node": "20.14.4",
-    "gh-pages": "^6.2.0",
+    "gh-pages": "^6.3.0",
     "husky": "^8.0.0",
     "tailwindcss": "^3.4.17",
     "typescript": "5.4.5"
