feat: Integrate Google Generative AI and enhance UI components

--- a/scouting/android/.vscode/settings.json
+++ b/scouting/android/.vscode/settings.json
@@ -1,4 +1,16 @@
 {
     "IDX.aI.enableInlineCompletion": true,
-    "IDX.aI.enableCodebaseIndexing": true
+    "IDX.aI.enableCodebaseIndexing": true,
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/CVS": true,
+        "**/.DS_Store": true,
+        "**/Thumbs.db": true
+    },
+    "hide-files.files": [],
+    "cSpell.enabledFileTypes": {
+        "dart": false
+    }
 }
