--- a/scouting/android/analysis_options.yaml
+++ b/scouting/android/analysis_options.yaml
@@ -10,6 +10,7 @@
 analyzer:
   errors:
     avoid_print: ignore
+    deprecated_member_use: ignore
     non_constant_identifier_names: ignore
 include: package:flutter_lints/flutter.yaml
 
