--- a/scouting/android/pubspec.yaml
+++ b/scouting/android/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   card_swiper: ^3.0.1
   timeline_tile: ^2.0.0
+  open_file: ^3.5.10
 
 dev_dependencies:
   build_runner: ^2.1.0
