--- a/scouting/android/pubspec.yaml
+++ b/scouting/android/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   card_swiper: ^3.0.1
   timeline_tile: ^2.0.0
   open_file: ^3.5.10
+  camera: ^0.11.1
 
 dev_dependencies:
   build_runner: ^2.1.0
