--- a/scouting/android/pubspec.yaml
+++ b/scouting/android/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   timeline_tile: ^2.0.0
   open_file: ^3.5.10
   camera: ^0.11.1
+  material_symbols_icons: ^4.2810.1
 
 dev_dependencies:
   build_runner: ^2.1.0
