--- a/operations-manual/package.json
+++ b/operations-manual/package.json
@@ -21,7 +21,9 @@
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
     "react-select": "^5.8.0",
+    "rehype-katex": "^7.0.1",
     "remark-definition-list": "^2.0.0",
+    "remark-math": "^6.0.0",
     "string-similarity": "^4.0.4",
     "styled-components": "^6.1.13",
     "y-codemirror.next": "^0.3.4",
