--- a/dev-dashboard/.env.example
+++ b/dev-dashboard/.env.example
@@ -4,8 +4,10 @@ VITE_DATABASE_URL=postgresql://username:password@ep-xxx-xxx.region.aws.neon.tech
 # Neon Auth URL (from Neon Console > Auth > Configuration)
 VITE_NEON_AUTH_URL=https://ep-xxx-xxx.neonauth.region.aws.neon.tech/neondb/auth
 
-# Discord Bot Configuration
-DISCORD_BOT_TOKEN=your_discord_bot_token_here
-GITHUB_TOKEN=your_github_personal_access_token
-GITHUB_OWNER=your-github-username
-GITHUB_REPO=feds-central
+# Url with port for the fedsbot/ server
+# (IP-ADDRESS is the address of ther server. PORT is whatever that server picks, check it's .env)
+FEDSBOT_URL=http://IP-ADDRESS:PORT
+
+# API Key for calls to the fedsbot/ server made by the FEDSBot web chat
+# (used to protect the chat API from being used by randos that discover it)
+FEDSBOT_API_KEY=test123
