--- a/dev-dashboard/.env.example
+++ b/dev-dashboard/.env.example
@@ -1,3 +1,6 @@
+# NOTE: Values used in production can be viewed/set here:
+# https://vercel.com/feds-programmings-projects/devdashboard/settings/environment-variables
+
 # Neon Database Connection (from Neon Console > Connection Details)
 VITE_DATABASE_URL=postgresql://username:password@ep-xxx-xxx.region.aws.neon.tech/neondb?sslmode=require
 
@@ -5,9 +8,9 @@ VITE_DATABASE_URL=postgresql://username:password@ep-xxx-xxx.region.aws.neon.tech
 VITE_NEON_AUTH_URL=https://ep-xxx-xxx.neonauth.region.aws.neon.tech/neondb/auth
 
 # Url with port for the fedsbot/ server
-# (IP-ADDRESS is the address of ther server. PORT is whatever that server picks, check it's .env)
+# (IP-ADDRESS is the address of ther server. PORT is whatever fedsbot/ has set, match whatever fedsbot/ has set in production!)
 FEDSBOT_URL=http://IP-ADDRESS:PORT
 
 # API Key for calls to the fedsbot/ server made by the FEDSBot web chat
-# (used to protect the chat API from being used by randos that discover it)
-FEDSBOT_API_KEY=test123
+# (used to protect the chat API from being used by randos that discover it. Match whatever fedsbot/ has set in production!)
+FEDSBOT_API_KEY=your_api_key_here
