--- a/robot/sim-core/build.gradle
+++ b/robot/sim-core/build.gradle
@@ -22,13 +22,11 @@ dependencies {
     // OBJ mesh loader
     api 'de.javagl:obj:0.4.0'
 
-    // WPILib geometry types (Pose3d, Translation3d, etc.)
-    api 'edu.wpi.first.wpilibj:wpilibj-java:2026.1.1'
+    // WPILib geometry types and units (Pose3d, Degrees, etc.) - Pure Java
     api 'edu.wpi.first.wpimath:wpimath-java:2026.1.1'
     api 'edu.wpi.first.wpiutil:wpiutil-java:2026.1.1'
     api 'edu.wpi.first.wpiunits:wpiunits-java:2026.1.1'
     api 'edu.wpi.first.ntcore:ntcore-java:2026.1.1'
-    api 'edu.wpi.first.hal:hal-java:2026.1.1'
 
     // WPILib runtime dependency for protobuf serialization
     api 'us.hebi.quickbuf:quickbuf-runtime:1.3.3'
@@ -40,4 +38,7 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    testLogging {
+        showStandardStreams = true
+    }
 }
